syntax = "proto3";

package nezha.chat.user.srv.service;

option go_package = "user";

service User {
  rpc Post(PostReq) returns (PostResp) {}
  rpc Login(LoginReq) returns (LoginResp) {}
  rpc GetList(GetListReq) returns (GetListResp) {}
}

message UserItem {
  string img = 1;
  string username = 2;
}

message Error {
  int32 code = 1;
  string msg = 2;
}

message PostReq {
  string username = 1;
  string password = 2;
}

message PostResp { Error error = 1; }

message LoginReq {
  string username = 1;
  string password = 2;
}

message LoginResp {
  Error error = 1;
  string token = 2;
}

message GetListReq {
  string name = 1;
  repeated string ids = 2;
}

message GetListResp {
  Error error = 1;
  UserItem list = 2;
}
